--- a/main.html
+++ b/main.html
@@ -26,6 +26,7 @@
         </audio>
         <audio>
             <source src=http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3>
+		</audio>
     </section>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
