--- a/main.html
+++ b/main.html
@@ -7,31 +7,17 @@
 </head>
 
 <body>
-	<nav>
-        <ul>
-            <li><a href="http://commondatastorage.googleapis.com">Link 1</a></li>
-            <li><a href="http://commondatastorage.googleapis.com">Link 2</a></li>
-            <li><a href="http://codeskulptor-demos.commondatastorage.googleapis.com">Link 3</a></li>
-        </ul>
-    </nav>
-
-    <!-- Part 2: Audio Section -->
-    <section>
-        <h2>3 Random Audios</h2>
-        <audio>
-            <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
-        </audio>
-        <audio>
-            <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
-        </audio>
-        <audio>
-            <source src=http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3>
-		</audio>
-    </section>
-	<!-- the entire body must be written by student -->
+	     <nav>
+			 <ul>
+				 <li><a href="a">Home</a></li>
+				 <li><a href="b">About us</a></li>
+				 <li><a href="c">Contact us</a></li>
+			 </ul></nav>
+  <h3>3 random audios</h3>
+  <audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+  <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+  <audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
     <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
-
-</html>
